feat: added reading questions

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
         }
     },
     "permissions": [
-        "activeTab"
+        "activeTab",
+        "speechSynthesis"
     ],
     "content_scripts": [
         {
